# agentmemory

./: .github-exclude  .gitignore  .mcp.json  .pre-commit-config.yaml  ACCEPTANCE_TESTS.md  APPROACHES.md  CASE_STUDIES.md  CHANGELOG.md  CITATION.cff  CLAIMS-AUDIT.md  CLAUDE.md  CLI_INJECTION_MECHANISMS.md  COMPACTION_LOGGING_PLAN.md  CONTRIBUTING.md  CONTROL_DATA_FLOW_RESEARCH.md  DESIGN_DIRECTIONS.md  DESIGN_VS_REALITY.md  Design vs Reality Audit.md  EXPERIMENTS.md  GRAPH_CONSTRUCTION_RESEARCH.md  HRR_FINDINGS.md  HRR_RESEARCH.md  IMPLEMENTATION_PLAN.md  LICENSE  LLM_FAILURE_SURVEY.md  ONBOARDING_COST_ANALYSIS.md  OPEN_QUESTIONS.md  PHASE2_TEST_PLAN.md  PIPELINE_STATUS.md  PLAN.md  PURGE_AND_CLASSIFICATION_DESIGN.md  README.md  REQUIREMENTS.md  SESSION_LOG.md  T0_RESULTS.md  TIME_DIMENSION_IMPACTS.md  TODO.md  TODO_CROSS_PROJECT_TESTING.md  corpus_manifest.json  main.py  (+1 more)
.claude-plugin/: plugin.json
.github/: dependabot.yml  pull_request_template.md
benchmarks/: amabench_adapter.py  conftest.py  exp5_build_index.py  exp5_export_lines.py  exp5_score.py  exp6_score.py  llm_entity_extraction.py  locomo_adapter.py  locomo_generate.py  locomo_score.py  locomo_score_protocol.py  longmemeval_adapter.py  longmemeval_budget_sweep.py  longmemeval_score.py  mab_adapter.py  mab_entity_index_adapter.py  mab_llm_entity_adapter.py  mab_reader.py  mab_triple_adapter.py  run_full_suite.py  structmemeval_adapter.py  test_benchmark_suite.py  verify_clean.py
docs/: ARCHITECTURE.md  ASCII_RENDERING_REFERENCE.md  BENCHMARK_DECAY_ANALYSIS.md  BENCHMARK_LOG.md  BENCHMARK_PLAN.md  BENCHMARK_PROTOCOL.md  BENCHMARK_RESULTS.md  BENCHMARK_SESSION_LOG.md  BENCHMARK_SESSION_LOG_V12.md  CLEAN_REINSTALL_PLAN.md  COMMANDS.md  DESIGN_IDEAS_STATE_TRACKING_AND_WONDER.md  EVALUATION_PROTOCOL.md  EXP3_RESULTS.md  EXP5_LLM_ENTITY_EXTRACTION.md  EXP5_RESULTS.md  EXP6_TEMPORAL_COHERENCE.md  HOOK_TEST_PLAN.md  INSTALL.md  INSTALL_PATTERN.md  LIMITATIONS.md  LLC_FORMATION_DRAFT.md  META_ANALYSIS_BASELINE_V2.2.md  NEXT_STEPS.md  OBSIDIAN.md  PHILOSOPHY.md  PRIVACY.md  PRIVATE_CS036_config_staleness_detection.md  PRIVATE_CS038_deploy_runbook_retrieval_failure.md  PUBLISH_STRATEGY.md  README.md  RELEASE.md  RELEASING.md  REPO_MANAGEMENT.md  RESEARCH_FREEZE_20260416.md  RHIZOME_ARCHITECTURE.md  SCORE_INFLATION_FIX.md  SEARCH_PROVENANCE_TEST.md  SESSION_HANDOFF_20260416.md  VALENCE_IMPLEMENTATION_PLAN.md  (+6 more)
experiments/: REASON_STATEMENTS_VS_BELIEFS.md  RESULTS_EXP79-83.md  WONDER_STATEMENTS_VS_BELIEFS.md  WONDER_TIME_DIMENSION_SYNTHESIS.md  ab_agentmemory_impact.py  audit_claudemd_overlap.md  exp10_cross_model_mcp.md  exp11_model_comparison_design.md  exp12_context_compression.md  exp13_self_referential_state.md  exp14_acceptance_tests.md  exp15_results.json  exp15_scaling.py  exp16_granular_decomposition.py  exp16_results.json  exp16_sentence_nodes.json  exp17_traceability_research.md  exp18_query_expansion_research.md  exp19_time_dimension.md  exp1_extraction_pipeline.py  exp1_sample_log.txt  exp1_sample_output.json  exp1_test_on_overrides.py  exp20_information_bottleneck.md  exp21_multi_project.md  exp22_hierarchical_confidence.py  exp22_results.json  exp23_gray_code_research.md  exp24_hrr_prototype.py  exp25_combined_retrieval.py  exp25_hrr_demo.py  exp25_results.json  exp26_hrr_vs_bfs.py  exp26_real_topology_hierarchical.py  exp26_results.json  exp27_epistemic_schema.md  exp28_directive_detection.md  exp29_granularity_comparison.py  exp29_results.json  exp2_bayesian_calibration.py  (+185 more)
research/: ACCEPTANCE_TESTS.md  ACCEPTANCE_TEST_RESULTS.md  ACTIVATION_CONDITION_DESIGN.md  APPROACHES.md  BAYESIAN_RESEARCH.md  CASE_STUDIES.md  CLASSIFICATION_GAP_ANALYSIS.md  CONTROL_DATA_FLOW_RESEARCH.md  CORRECTION_BURDEN_REFRAME.md  DESIGN_DIRECTIONS.md  EDGE_DYNAMICS_BIOINSPIRED.md  EDGE_DYNAMICS_ENERGY.md  PLAN.md  (+27 more)
(+295 files in other folders)
