[project]
name = "agentmemory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.93.0",
    "datasketch>=1.9.0",
    "fastmcp>=3.2.3",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[project.scripts]
agentmemory = "agentmemory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
exclude = ["experiments/exp4[0-9]*.py", "experiments/exp5[0-9]*.py", "experiments/exp60*.py"]
