[project]
name = "agentmemory"
version = "2.2.1"
description = "Persistent, graph-backed memory for AI coding agents. Bayesian confidence, FTS5 search, HRR vocabulary bridge, entity-index retrieval, MCP server."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "yoshi280"}]
keywords = ["ai", "memory", "llm", "mcp", "agent", "retrieval", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.93.0",
    "datasketch>=1.9.0",
    "fastmcp>=3.2.3",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/yoshi280/agentmemory"
Repository = "https://github.com/yoshi280/agentmemory"
Changelog = "https://github.com/yoshi280/agentmemory/blob/master/CHANGELOG.md"

[project.scripts]
agentmemory = "agentmemory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
exclude = ["experiments/exp4[0-9]*.py", "experiments/exp5[0-9]*.py", "experiments/exp60*.py"]
