[project]
name = "agentmemory-rrs"
version = "3.0.2"
description = "Persistent memory for AI coding agents. Correct once, remembered forever. Every design decision validated by experiment before shipping to production."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "robotrocketscience"}]
keywords = ["ai", "memory", "llm", "mcp", "agent", "retrieval", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.93.0",
    "datasketch>=1.9.0",
    "fastmcp>=3.2.3",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/robot-rocket-science/agentmemory"
Repository = "https://github.com/robot-rocket-science/agentmemory"
Changelog = "https://github.com/robot-rocket-science/agentmemory/blob/master/CHANGELOG.md"

[project.scripts]
agentmemory = "agentmemory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmemory"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
exclude = ["experiments/", "benchmarks/", "scripts/"]

[tool.ruff]
extend-exclude = ["experiments/", "benchmarks/", "scripts/"]

[tool.ruff.lint]
extend-ignore = ["E402"]
